2007-02-04  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-find-toolbar.c: Fixing the documentation for the
	FindToolbar.

2007-02-02  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* doc/Makefile.am:
	* doc/gtk-doc.make: EXTRA_DIST cleanup.

	* src/hildon-defines.c:
	* src/hildon-defines.h: Icon sizes fixture.

	* examples/Makefile.am:
	* examples/hildon-icon-sizes-example.c: Example for new icon defines.

	* src/hildon-time-editor.c:
	* src/hildon-wizard-dialog.c:
	* src/hildon-date-editor.c: Fixes for new icon sizes.

2007-02-01  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-helper.c:
	* src/hildon-helper.h: Adding the
	hildon_helper_set_insensitive_message function. Implementation not
	done yet.

2007-02-01  Johan Bilien  <johan.bilien@nokia.com>

	* src/hildon-window.c:
	Fixed the check for which property changed in _notify
	Removed unused static function. Fixes: MB#962

2007-02-01  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* doc/gtk-doc.make:
	* doc/Makefile.am: Small adjustments to directory layout.

	* examples/Makefile.am:
	* examples/hildon-time-editor-example.c: A new example for time
	editor.

2007-01-31  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/hildon-caption-example.c: Adding checkbutton to the caption
	examples to see how things are looking.

	* src/hildon-caption.c: Xan's fix for caption and checkbutton.

2007-01-31  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-color-chooser-dialog.c:
	* src/hildon-color-chooser.c: Adding some documentation.

2007-01-31  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* configure.ac:
	* pkgconfig/hildon.pc.in:
	* src/hildon-seekbar.c: Xan's fixes for new gtk compilation.

2007-01-29  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* ./: More documentation fixes. 

2007-01-29  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* doc/Makefile.am: