@@ -1,3 +1,13 @@
+2007-02-05  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
+
+	* examples/hildon-controlbar-example.c:
+	* src/hildon-controlbar.c: Fixing the controlbar to behave as if
+	minimal-bars-visible (old 2.6 mod) was equal 1.
+
+	* src/hildon-banner-private.h:
+	* src/hildon-banner.c: Fixing the problem with two information banners
+	being spawned one after another.
+
 2007-02-04  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
 
 	* src/hildon-find-toolbar.c: Fixing the documentation for the
